Fix cards to be more responsive on mobile

--- a/style.css
+++ b/style.css
@@ -147,10 +147,6 @@ h2 {
     gap: 1%;
 }
 
-.score-track {
-
-}
-
 .overlay {
     display: none;
     position: fixed;
@@ -209,4 +205,78 @@ p#final-score {
 #github {
     width: 22px;
     height: "auto";
+}
+
+@media only screen and (max-width: 600px) {
+
+    .main {
+        margin: 12%;
+    }
+
+    .card-box {
+        width: 8em;
+        height: 8em;
+        border-radius: 12px;
+    }
+
+    #rock-img,
+    #paper-img,
+    #scissors-img {
+        width: 7em;
+        height: 7em;
+    }
+
+    #rock-img:hover,
+    #paper-img:hover,
+    #scissors-img:hover {
+        width: 8em;
+        height: 8em;
+    }
+
+    .card-box:hover {
+        width: 8em;
+        height: 8em;
+        outline: 4px solid #B06161;
+        margin: 0;
+        cursor: default;
+    }
+
+    h1 {
+        font-size: 2.5em;
+    }
+
+    h2 {
+        font-size: 1.2em;
+    }
+
+    .banner-text {
+        font-size: 0.8em;
+    }
+
+    #banner {
+        margin-left: 10%;
+    }
+
+    .cards {
+        gap: 20px;
+    }
+
+    .footer {
+        font-size: 0.8em;
+    }
+
+    .popup {
+        width: 250px;
+        height: 100px;
+        padding: 15px;
+    }
+
+    p#final-score {
+        font-size: 24px;
+    }
+
+    .popup-button {
+        padding: 4px 8px;
+        font-size: 0.9rem;
+    }
 }
